# agent-bitcoin

./: .env.example  .gitignore  .~lock.test-suite.doc#  Agent-Bitcoin-C4.md  Agent-Bitcoin.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.regtest.yml  lnd-regtest.conf  mount_nvme.sh  network  pyproject.toml  quickstart  requirements.txt  reset-and-mine.sh  shutdown.sh  start-agent-bitcoin-infrastructure.sh  startup.sh  test-suite.doc  test-suite.md  test_sdk.py
agent-bitcoin/: __init__.py  client.py  lightning.py  models.py
agent_bitcoin/: __init__.py  client.py  exceptions.py  lightning.py  models.py  utils.py
agent_bitcoin/agents/: __init__.py  payment_decision.py
agents/: __init__.py  payment_decision.py
backend/: .env.example  main.py
examples/: agent_api_example.py  basic_usage.py  full_grok_agent.py  full_intelligent_agent.py  full_intelligent_agent_grok.py  full_intelligent_agent_ollama.py  grok_example.py  langchain_example.py  langchain_ollama.py  ollama_example.py  payment_decision_agent.py
old/: start-agent-bitcoin.sh
tests/: test-suite.md  test-suite.txt  test_client.py
