[project]
name = "agent-bitcoin"
version = "0.1.0"
description = "Lightning Network payments for autonomous AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.2.2",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-core>=1.4.8",
    "langchain-classic>=1.0.8",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "langchain",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
