[project]
name = "agent-bitcoin"
version = "0.1.0"
description = "Bitcoin Lightning network payments for autonomous AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Richard Casey" }]

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_bitcoin*"]

[tool.pytest.ini_options]
pythonpath = ["."]