[project]
name = "agent-bitcoin"
version = "0.1.0"
description = "Lightning Network payments for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Richard Casey", email = "richardcaseyhpc@protonmail.com"}
]
keywords = ["bitcoin", "lightning", "lightning-network", "ai-agents", "sdk", "crypto-payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    'uvicorn[standard]>=0.30.0',
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-xai>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gpu7/agent-bitcoin"
Repository = "https://github.com/gpu7/agent-bitcoin"
Documentation = "https://github.com/gpu7/agent-bitcoin/blob/main/README.md"
Issues = "https://github.com/gpu7/agent-bitcoin/issues"
Changelog = "https://github.com/gpu7/agent-bitcoin/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_bitcoin*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--tb=short"